--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
       form input { border: 0; padding: 10px;  margin-right: .1%; }
       form button { background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #colSide { background-color: darkgrey; height: 100%; padding: 0px;}
-      #colMain { height: 100%};
-      .toggle { float: right;}
+      #colSide { background-color: #eee; height: 90%; padding: 0px; float: right;}
+      #colMain { height: 100%; position: fixed; }
+      .toggle { position: absolute; right: 0;}
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+      #messages li:nth-child(odd) { background: #FFFFFF; }
+      #messages li:nth-child(even) { background: #eee; }
       #Main{ height: 65%;}
-      #SelectMenu{ height: 30%};
+      #SelectMenu{ height: 33%;}
+
 
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
@@ -31,26 +33,27 @@
     <div class="container" style="width:100%; height: 100%;" ng-controller="AppCtrl">
       <div class="row">
         <div ng-class="showSide ? 'col-xs-9' : 'col-xs-12'" id="colMain">
-          <button ng-click="toggle()" class="toggle">Toggle</button>
+          <button ng-click="toggle()" class="toggle btn" ng-class="showSide ? 'btn-default' : 'btn-danger'" style="height: 2.5em; width: 4em;">Chat</button>
           <div id="Main">
             <script>
               var socket = io();
               socket.on('script', function (script) {
                 $('#Main').html($('<div>').text(script));
               });
+              var chat_num =0;
             </script>
           </div>
           <div id="SelectMenu">
-            <li ng-repeat="item_sentaku in sentaku track by $index" ng-click="click_sentaku($index)">
+            <button ng-repeat="item_sentaku in sentaku track by $index" ng-click="click_sentaku($index)" class="col-xs-12 btn btn-default" style="height: 33.33%; margin: 1px;">
               {{item_sentaku.text}}
-            </li>
+            </button>
           </div>
         </div>
-        <div ng-class="showSide ? 'col-xs-3' : 'hidden'" id="colSide">
-          <ul id="messages"></ul>
-          <form action="">
-            <input id="m" autocomplete="off" ng-class="showSide ? 'col-xs-2' : 'hidden'" />
-            <button ng-class="showSide ? 'col-xs-1' : 'hidden'" >Send</button>
+        <div ng-class="showSide ? 'col-xs-3' : 'hidden'" id="colSide" >
+          <ul id="messages" style="height: 100%; overflow-y: scroll" ></ul>
+          <form action="" style="height: 10%;" style="position: fixed; bottom: 0px;">
+            <input id="m" autocomplete="off" ng-class="showSide ? 'col-xs-2' : 'hidden'" style="height: 100%;"/>
+            <button ng-class="showSide ? 'col-xs-1' : 'hidden'" style="height: 100%;">Send</button>
           </form>
           <script>
             var socket = io();
@@ -61,7 +64,13 @@
             });
             socket.on('chat message', function(msg){
               $('#messages').append($('<li>').text(msg));
+              chat_num++;
+              console.log($('#messages').height());
+              $(function(){
+                $('#messages').animate({scrollTop:chat_num*35},100);
+              });
             });
+
           </script>
         </div>
       </div>
