[fix] changed the title to 'Project MARS'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Project MARS</title>
     <style>
       html, body , .row{
         height: 100%;
